# REWL_Simulator

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  README.ipynb  README.md
Scripts/: msi_setup_Lsize.sh  run_ashkin_teller2d.sh  run_msi_ising2d.sh  run_serial.sh  run_serial_valgrind.sh  run_test.sh  run_valgrind.sh  sbatch_Ashkin_Teller2d-job_arrays.slurm  sbatch_Ashkin_Teller2d-many_tasks.slurm  sbatch_Ashkin_Teller2d.slurm  sbatch_Ising2d-many_tasks.slurm  sbatch_Ising2d.slurm  setup_and_sbatch.sh
Scripts/Plotting/: ashkin_teller_density_plotter.py  ashkin_teller_density_sides.py  move_data_to_windows.sh  multiple_couplings.py  parse_and_fss_observable.py  parse_and_plot_observables.py  parse_file_header.py  plot_and_move.sh  plot_coupling_and_copy.sh  plot_model_couplings_for_fixed_size.sh  plot_model_sizes_for_fixed_coupling.sh  plot_self_averaged_observables.py  plot_various_L_and_copy.sh  rfbm_temperature_splitting.py
Statistics/: average_canonical_obs.py  main.cpp  nonlinear_observables.py
src/: CMakeLists.txt  build.config  main.cpp
src/Hamiltonians/: CMakeLists.txt  model_hamiltonians.hpp
src/Hamiltonians/Address_Books/: CMakeLists.txt  address_books.hpp  lattice_address_book.hpp
src/Hamiltonians/Address_Books/Square_Periodic_Lattices/: CMakeLists.txt  square_2d_grid_helpers.hpp  square_2d_nearest_neighbor_functor.cpp  square_2d_nearest_neighbor_functor.hpp  square_2d_nearest_neighbors.cpp  square_2d_nearest_neighbors.hpp
src/Hamiltonians/Address_Books/Square_Periodic_Lattices/Tests/: square_2d_nearest_neighbor_tester.cpp  square_2d_nearest_neighbor_tester.hpp
src/Hamiltonians/Ashkin-Teller2d/: CMakeLists.txt  ashkin-teller2d_parameter_string.hpp  ashkin-teller2d_parameters.cxx  ashkin_teller2d_hamiltonian.hpp  ashkin_teller2d_observables.hpp  ashkin_teller2d_parameter_string.hpp
src/Hamiltonians/Ashkin-Teller2d/source/: CMakeLists.txt  ashkin-teller2d_parameter_string.cpp
src/Hamiltonians/Ashkin_Teller2d/: CMakeLists.txt  ashkin_teller2d_hamiltonian.hpp  ashkin_teller2d_observables.hpp  ashkin_teller2d_parameter_string.hpp  ashkin_teller2d_parameters.cxx
src/Hamiltonians/Ashkin_Teller2d/Density_Plots/: CMakeLists.txt  ashkin_teller_densities.hpp  ashkin_teller_densities_parameter_string.cpp  ashkin_teller_densities_parameters.cxx  density_averaging.cpp  write_density_plots.cpp
src/Hamiltonians/Ashkin_Teller2d/source/: CMakeLists.txt  ashkin_teller2d_parameter_string.cpp
src/Hamiltonians/Correlations/: CMakeLists.txt  fourier_correlator.hpp
src/Hamiltonians/Disorder/: CMakeLists.txt  random_fields.hpp
src/Hamiltonians/Ising2d/: CMakeLists.txt  ising2d_hamiltonian.hpp  ising2d_observables.hpp  ising2d_parameter_string.hpp  ising2d_parameters.cxx  ising_site.hpp  ising_site_container.hpp
src/Hamiltonians/Ising2d/PM_Dipolar_Interactions/: CMakeLists.txt  pmd_interactions.hpp
src/Hamiltonians/Ising2d/source/: CMakeLists.txt  ising2d_header_source.cpp  ising2d_parameter_string.cpp
src/Hamiltonians/Simulated_Annealer/: CMakeLists.txt  simulated_annealer.hpp  simulated_annealing_parameter_strings.hpp  simulated_annealing_parameters.cxx  simulated_annealing_utilities.hpp
src/Hamiltonians/Site_Variables/: CMakeLists.txt  site_variables.hpp
src/Hamiltonians/grid/: CMakeLists.txt  grid_setup.cpp  grid_setup.hpp  pbc_2d_vectors.hpp
src/REWL/: CMakeLists.txt  README.md  REWL.cpp  glazier.hpp  histogram_index.hpp  mpi_rewl_comm_setup.hpp  rewl_histograms.hpp  rewl_parameter_string.hpp  rewl_parameters.hpp  rewl_walker.hpp  wang_landau.hpp
src/REWL/Wang_Landau/: CMakeLists.txt  wang_landau.hpp
src/Simulation/: CMakeLists.txt  main.cpp  main_headers.hpp  rewl_simulation.cpp  rewl_simulation.hpp
src/Thermodynamics/: CMakeLists.txt  order_parameter_cumulants.hpp  self_averaged_observables_writer.hpp  thermodynamics.hpp  write_nonlinear_observables.hpp  write_self_averaged_observables.hpp
src/file_management/: CMakeLists.txt  file_header.cpp  file_header.hpp  file_manager.cpp  file_manager.hpp
src/util/: CMakeLists.txt  array_shift.hpp  command_line_arguments.cpp  command_line_arguments.hpp  concatenate_rewl_tables.hpp  helpful_global_macros.hpp  mpi_rewl_definitions.hpp  mpi_rewl_helpers.hpp  numerical_derivatives.hpp  random_number_generators.hpp  vector_matching.hpp  write_microcanonical_observables.hpp
